# joker-poker

./: .gitignore  CMakeLists.txt  CREDITS.md  CREDTIS.md  README.md  debug.c  debug.h  game.c  game.h  gfx.c  gfx.h  main.c  random.c  random.h  renderer.c  renderer.h  state.c  state.h  system.c  system.h  text.c  text.h  utils.c  utils.h  window.c  window.h
.github/workflows/: build.yml
content/: joker.c  joker.h  spectral.c  spectral.h  tarot.c  tarot.h
lib/: clay.h  cvector.h  layout.h
